<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="https://schemas.android.com/tools" tools:ignore="TypographyDashes">

    <string name="app_name">~Roach Rush~</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="game_over">Game Over</string>
    <string name="attention">Attention</string>
    <string name="high_score">High Score: %s</string>
    <string name="new_high_score">New High Score: %s</string>
    <string name="play_again">Try again</string>
    <string name="btn_continue">Continue</string>
    <string name="close">Close</string>
    <string name="statisctic">Statistic</string>
    <string name="start">Start</string>
    <string name="instrucion">Tips</string>
    <string name="more_games">More Games</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="resume">Resume</string>
    <string name="quit">Quit</string>
    <string name="simple_cockroach">Simple cockroaches. Crush by touch or swipe.</string>
    <string name="larva_cockroach">Cockroach larva. Generate 2 new fast small cockroaches. Crush by touch 4 times.</string>
    <string name="single_spider">Spider. Crush by touch 2 times.</string>
    <string name="simple_dont_touch">Don\'t touch that guys. They reduce health value or finish game.</string>
    <string name="single_bug">Useful bug. Kill all visible units around.</string>
    <string name="single_bonus_heart">Extra bonus and health.</string>
    <string name="single_medic">Medic. Recover dead cockroaches.</string>
    <string name="no_more_health">No more health</string>
    <string name="wave">Wave: </string>
    <string name="times">times</string>

    <!-- Replace placeholder ID with your tracking ID -->
    <string name="ga_trackingId">UA-39369083-1</string>

    <!-- Enable automatic activity tracking -->
    <bool name="ga_autoActivityTracking">true</bool>

    <!-- Enable automatic exception tracking -->
    <bool name="ga_reportUncaughtExceptions">true</bool>

</resources>