<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/btn_bg"
            android:padding="10dp"
            android:text="@string/start"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/btn_bg"
            android:padding="10dp"
            android:text="@string/instrucion"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_open_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/btn_bg"
            android:padding="10dp"
            android:text="@string/more_games"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_remove_ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/btn_bg"
            android:padding="10dp"
            android:text="@string/remove_ads"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ToggleButton
        android:id="@+id/sound_swither"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:background="@drawable/sound_selector"
        android:textOff=""
        android:textOn="" />

</RelativeLayout>