<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_over_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/game_over_bg"
        android:padding="10dp" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/close"
            android:layout_alignParentTop="true"
            android:padding="15dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="3" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/app_name"
                            android:scaleType="centerInside"
                            android:src="@drawable/single_cockroach" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/app_name"
                            android:scaleType="centerInside"
                            android:src="@drawable/single_fly" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/app_name"
                            android:scaleType="centerInside"
                            android:src="@drawable/single_grey" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/text_1"
                        style="@style/tips_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/simple_cockroach" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerInside"
                        android:src="@drawable/single_larva" />

                    <TextView
                        android:id="@+id/text_2"
                        style="@style/tips_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/larva_cockroach" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerInside"
                        android:src="@drawable/single_spider" />

                    <TextView
                        android:id="@+id/text_3"
                        style="@style/tips_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/single_spider" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="3" >

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/app_name"
                            android:scaleType="centerInside"
                            android:src="@drawable/single_big_lady" />

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/app_name"
                            android:scaleType="centerInside"
                            android:src="@drawable/single_small_lady" />

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/app_name"
                            android:scaleType="centerInside"
                            android:src="@drawable/single_bat" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/text_4"
                        style="@style/tips_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/simple_dont_touch" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_gravity="center_vertical"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerInside"
                        android:src="@drawable/single_bug" />

                    <TextView
                        android:id="@+id/text_5"
                        style="@style/tips_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/single_bug" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/app_name"
                            android:scaleType="centerInside"
                            android:src="@drawable/single_bous" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/app_name"
                            android:scaleType="centerInside"
                            android:src="@drawable/single_health" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/text_6"
                        style="@style/tips_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/single_bonus_heart" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerInside"
                        android:src="@drawable/single_cockroach_medic" />

                    <TextView
                        android:id="@+id/text_7"
                        style="@style/tips_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/single_medic"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_bg_main_menu"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/close"
            android:textSize="36sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>