<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/game_over_bg"
        android:padding="10dp" >

        <TextView
            android:id="@+id/statistic_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/statisctic"
            android:textColor="@android:color/black"
            android:textIsSelectable="true"
            android:textSize="36sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/list_statistic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/game_over"
            android:layout_below="@+id/statistic_title"
            android:divider="@null"
            android:fadeScrollbars="false"
            android:fadingEdge="none"
            android:fastScrollEnabled="false"
            android:focusableInTouchMode="false"
            android:listSelector="@drawable/list_selector"
            android:scrollingCache="false"
            android:smoothScrollbar="false" />

        <!--
             <GridView
            android:id="@+id/list_statistic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/game_over"
            android:layout_below="@+id/statistic_title"
            android:divider="@null"
            android:fadeScrollbars="false"
            android:fadingEdge="none"
            android:fastScrollEnabled="false"
            android:focusableInTouchMode="false"
            android:listSelector="@drawable/list_selector"
            android:numColumns="2"
            android:scrollbars="none"
            android:scrollingCache="false"
            android:smoothScrollbar="false" />
        -->

        <TextView
            android:id="@+id/game_over"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/highScore"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/game_over"
            android:textColor="@android:color/black"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/highScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/try_again"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textIsSelectable="true"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/play_again"
            android:textSize="36sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</RelativeLayout>